small spacing issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,7 +46,7 @@ a, a:hover {
   display: none; 
   /* position: absolute;
   top: 20%;
-  width: 100%; */ */
+  width: 100%; */
   position: relative;
   bottom: 3rem;
 }
@@ -84,7 +84,7 @@ a, a:hover {
 
 .item-size {
   top: 3rem;
-  left: 7px;
+  left: 1rem;
   max-width: 3rem;
 }
 
